--- a/index.html
+++ b/index.html
@@ -23,17 +23,12 @@
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">
-              <span>About Us</span>
+              <span>About</span>
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
-              <span>Projects</span>
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              <span>Studio</span>
+            <a href="gallery.html" class="nav__link">
+              <span>Gallery</span>
             </a>
           </li>
           <li class="nav__item">
