--- a/index.html
+++ b/index.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
-  <link rel="stylesheet" href="./main.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <title>James Scott Purdy</title>
-</head>
-<body>
-  <header class="header" id="header">
-    <nav class="nav container">
-      <a href="#" class="nav__logo">
-        <img src="./scott-logo.png" alt="Scott Purdy Logo">
-      </a>
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              <span>About</span>
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="gallery.html" class="nav__link">
-              <span>Gallery</span>
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              <span>Contact</span>
-            </a>
-          </li>
-        </ul>
-        <div class="nav__close" id="nav-close">
-          <i class="ri-close-large-line"></i>
-        </div>
-      </div>
-      <div class="nav__toggle" id="nav-toggle">
-        <i class="ri-menu-line"></i>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <main>
-      <div class="container">
-        <div class="header-body">
-          <div class="slider">
-            <div class="overlay anim"></div>
-            <img src="./assets/images/scott1.jpg" alt="img" class="slider-img" />
-          </div>
-          <div class="text">
-            <div>
-              <h1>
-                Modern Minimal
-              </h1>
-              <p>
-                Modernism is the single most important new style or philosophy of architecture and design of the 20th century, associated with an analytical approach to the function of buildings, a strictly rational use of materials, an
-                opennesss to structural innovation and the elimination of ornament
-              </p>
-            </div>
-          </div>
-          <ul class="social">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <title>James Scott Purdy</title>
+  </head>
+  <body>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <img src="./assets/images/scott-logo.png" alt="Scott Purdy Logo" />
+        </a>
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <span>Home</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="gallery.html" class="nav__link">
+                <span>Portfolio</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <span>Contact</span>
+              </a>
+            </li>
           </ul>
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-large-line"></i>
+          </div>
         </div>
-      </div>
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-menu-line"></i>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <main>
+        <div class="container">
+          <div class="header-body">
+            <div class="slider">
+              <div class="overlay anim"></div>
+              <img src="./assets/images/scott.jpg" alt="img" class="slider-img" />
+            </div>
+            <div class="text">
+              <div>
+                <h1>James Scott Purdy</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+              </div>
+            </div>
+            <ul class="social">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </main>
-  </main>
-  <script src="assets/js/main.js"></script>
-</body>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
