--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 <body>
 	<header class="header" id="header">
 		<nav class="nav container">
-		  <a href="#" class="nav__logo">
+		  <a href="index.html" class="nav__logo">
 			<img src="./assets/images/scott-logo.png" alt="Scott Purdy Logo" />
 		  </a>
 		  <div class="nav__menu" id="nav-menu">
