--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
     />
-	<link rel="stylesheet" href="./gallery.css">
+	<link rel="stylesheet" href="./assets/css/gallery.css">
 	<title>Document</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
 				</a>
 			  </li>
 			  <li class="nav__item">
-				<a href="#" class="nav__link">
+				<a href="contact.html" class="nav__link">
 				  <span>Contact</span>
 				</a>
 			  </li>
