--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="contact.html" class="nav__link">
                 <span>Contact</span>
               </a>
             </li>
@@ -50,14 +50,23 @@
           <div class="header-body">
             <div class="slider">
               <div class="overlay anim"></div>
-              <img src="./assets/images/scott.jpg" alt="img" class="slider-img" />
+              <img
+                src="./assets/images/scott.jpg"
+                alt="img"
+                class="slider-img"
+              />
             </div>
             <div class="text">
               <div>
-                <h1>James Scott Purdy</h1>
+                <h1>Scott Purdy</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  J. SCOTT PURDY is a life-long painter, beginning his study
+                  under the tutelage of Herb Jackson. His love for science and
+                  nature is seen in his work, creating colorful abstract visions
+                  which hint at reality while retaining a playful mood and a
+                  sense of humor. Other than spending time with family or
+                  playing golf with friends, painting is one of Purdy’s favorite
+                  creative outlets.
                 </p>
               </div>
             </div>
