--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 		  <div class="nav__menu" id="nav-menu">
 			<ul class="nav__list">
 			  <li class="nav__item">
-				<a href="#" class="nav__link">
+				<a href="index.html" class="nav__link">
 				  <span>Home</span>
 				</a>
 			  </li>
